fix footer logo spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -167,6 +167,11 @@ section {
 
 #somet {
   font-size: 200%;
+
+  a {
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+  }
 }
 
 .row-custom {
